2006-05-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/beans/beancontext/Remove.java:
	New file. Tests the semantics of removing a bean
	from a context.

2006-05-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/lang/Character/Blocks.java,
	* gnu/testlet/java/lang/Character/Blocks15.java:
	New files to test Character blocks.
	* gnu/testlet/java/beans/beancontext/Add.java:
	Add more readable checkpoints.
	
2006-05-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/beans/beancontext/Add.java:
	New file. Tests the semantics of adding a bean
	to a context.
	
2006-05-20  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/javax/crypto/jce/keyring/TestOfKeystore.java: New test.
	* gnu/testlet/gnu/javax/crypto/keyring/TestOfGnuPrivateKeyring.java:
	Likewise.

2006-05-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/stream/MemoryCacheImageInputStream/TestImageInputStreamImpl.java:
	Complete test.

2006-05-18  Anthony Balkissoon  <abalkiss@redhat.com>

	* Makefile.in: Regenerated.
	* aclocal.m4: Regenerated.

2006-05-18  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java:
	(getBootClassPath): Changed location of DetectBootclasspath because it
	is now an inner class of Harness rather than a separate source file
	in gnu/testlet.
	(Harness.DetectBootclasspath): New inner class.
	* gnu/testlet/DetectBootclasspath.java: Removed this file.

2006-05-18  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/font/ShapeGraphicAttribute: New directory.
	* gnu/testlet/java/awt/font/ShapeGraphicAttribute/ShapeGraphicAttributeTest: New test.
	* gnu/testlet/java/awt/font/ImageGraphicAttribute/ImageGraphicAttributeTest.java: Added
	equals test.

2006-05-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/tree/TreePath/PR27651.java: New test.

2006-05-17  Thomas Fitzsimmons  <fitzsim@redhat.com>
