@@ -1,5 +1,14 @@
 2006-05-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* gnu/testlet/java/beans/beancontext/Array.java: 
+	New file. Test the semantics of contains and converting
+	to an array.
+	* gnu/testlet/java/beans/beancontext/InstantiateChild.java: 
+	New file.  Test instantiation of a child in a context
+	by class name.
+	
+2006-05-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* gnu/testlet/java/beans/beancontext/Remove.java:
 	New file. Tests the semantics of removing a bean
 	from a context.
